hopefully have a working auth system, hit rate limit though, its cause is already fixed

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@octokit/auth-oauth-user": "^5.1.4",
+    "cookies-next": "^5.1.0",
     "next": "15.3.0",
     "octokit": "^4.1.3",
     "react": "^19.0.0",
